fixed too small sidebar

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -19,6 +19,9 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
+  height: 100%;
+  min-height: 100vh;
+
   @media (min-width: @laptop-width) {
     overflow: hidden;
   }
@@ -36,6 +39,7 @@ a {
 .sidebar {
   background: #222222;
   height: @sidebar-height;
+  min-height: 150px;
 
   .flex-container;
   flex-wrap: nowrap;
@@ -60,6 +64,8 @@ a {
   .primary-background(0.8);
 
   width: 23vh;
+  min-height: 140px;
+  min-width: 115px;
   align-self: center;
   margin-left: 1vh;
 
@@ -118,11 +124,11 @@ nav {
     top: 0;
     position: absolute;
     margin-top: 30px;
-    span {
-      .flex-container;
-      flex-direction: row;
-      justify-content: center;
-    }
+    // span {
+    //   .flex-container;
+    //   flex-direction: row;
+    //   justify-content: center;
+    // }
   }
   align-self: center;
 }
